# frost-sop

./: .gitignore  AUDIT_REPORT.md  README.md  V3.1_V4.0_SUMMARY.md  app.py  create_task_only.py  push_v3.bat  push_v3_tags.bat  push_v5.bat  push_v5_final.bat  requirements.txt  start_all.bat  start_nicegui.py  stop_all.bat  test_task.json
workspace/frost-sop/: .coverage  .gitignore  .pre-commit-config.yaml  AUDIT_README.md  AUDIT_REPORT_V6.0.1.md  AUDIT_REPORT_V6.0.md  AUDIT_TEST_TOOLCHAIN_20260701.md  BASELINE_v5.0.0.md  CHANGELOG.md  F10_ACCEPTANCE_REPORT.md  F12_TEST_REPORT.md  F15_ACCEPTANCE_REPORT.md  F16_COMPLETION_REPORT.md  F5_DEEP_TEST_REPORT.md  F6_5_TEST_REPORT.md  F6_TEST_REPORT.md  F7_ACCEPTANCE_REPORT.md  F8_ACCEPTANCE_REPORT.md  F9_ACCEPTANCE_REPORT.md  FINAL_ACCEPTANCE_REPORT.md  FROST-SOP_V1.0_AUDIT_REPORT_20260624.md  FROST-SOP_V1.1+_RE_AUDIT_REPORT.md  FROST-SOP_V1.1_FR_AUDIT_REPORT.md  INIT_TEST_GUIDE.md  Makefile  OPC_BOSS_UI_RESEARCH.md  PROJECT_WORKBENCH_DESIGN.md  README.md  SESSION_SUMMARY.md  V2.1_PATCH_REPORT.md  V2_ACCEPTANCE_REPORT.md  V3.0_FINAL_REPORT.md  V3.1_ACCEPTANCE_REPORT.md  V31_V40_CODE_AUDIT_REPORT.md  V3_ACCEPTANCE_REPORT.md  V3_AUDIT_REPORT_FINAL.md  V3_BUG_FIX_REPORT.md  V3_DESIGN_DOC.md  V3_EXEC_AUDIT_REPORT.md  V3_MULTI_EXPERT_REVIEW.md  (+32 more)
workspace/frost-sop/.benchmarks/Windows-CPython-3.13-64bit/: 0001_baseline.json
workspace/frost-sop/.github/workflows/: test.yml
workspace/frost-sop/.hypothesis/constants/: 02bc38ba97bf8e5b  02d3024a00102133  08c22b719eafbddf  18db3d60af483395  22ada9654a6331ab  2300bfd72501c04f  23ecbe60ad5d4a74  244ac758b0c7244a  26b8e0ea9691dba6  2797bc53967b0953  27ef1ad070fcee7f  2944467e83506ccb  2a66da01459bace3  2d6a1ab933be2b4e  33016a42ad599940  343b8692f0fd2815  35efa6cf88d6fbb5  3f19854e03676a02  (+41 more)
workspace/frost-sop/V3_AUDIT_MATERIALS/: commit_log.md  test_results.md
workspace/frost-sop/agents/: ancestor.py  auditor.py  elder.py  footman.py  parent.py  task_parent.py
workspace/frost-sop/api/: main.py  models.py
workspace/frost-sop/assets/: config_20260622_182955.json
workspace/frost-sop/audit_materials/: ARCHITECTURE_DIAGRAM.md  AUDIT_REQUEST.md  CORE_MODULES_SUMMARY.md  DEPENDENCIES.md  KNOWN_ISSUES.md  P0_P1_fix_summary.md  PROJECT_OVERVIEW.md  README_FOR_AUDITOR.md  TEST_COVERAGE.md  fix_evidence.md
workspace/frost-sop/audit_materials_v2/: FROST_WHITEPAPER_GAP_MAPPING.md  FULL_CODE_AUDIT_REPORT_20260629.md  README_FOR_AUDITOR.md  V2.1_AUDIT_UPDATE.md  V2_ARCHITECTURE.md  V2_AUDIT_REQUEST.md  V2_AUDIT_SUMMARY.md  V2_CODE_CHANGES.md  V2_DESIGN_DECISIONS.md  V2_E2E_EVIDENCE.md  V2_TECHNICAL_DEBT.md  V2_TEST_REPORT.md  V40_P2_AUDIT_REPORT.md  V50_PANEL_DEV_AUDIT.md  V50_PANEL_FIX_AUDIT.md
workspace/frost-sop/audit_results/: bandit_security_issues.json  code_quality_summary.json  coverage.json  coverage_audit_report.json  detect_secrets_baseline.json  flake8_issues.json  flake8_issues.txt  mypy_types.txt  pylint_errors.json  radon_complexity.json  security_audit_report.json  uncovered_lines.json
workspace/frost-sop/core/: agent.py  armory.py  armory_lifecycle.py  capability_meta.py  circuit_breaker.py  coordinator.py  cost.py  db.py  dead_mans_switch.py  decision_manager.py  event_bus.py  event_bus_daemon.py  event_subscribers.py  graph_executor.py  health_meta.py  json_safety.py  knowledge_v2.py  lifecycle_meta.py  log_config.py  memory.py  monitor.py  notifier.py  panel.py  panel_adapters.py  panel_data_provider.py  panel_decision.py  panel_generator.py  panel_renderer.py  path_safety.py  plan_scheduler.py  project.py  relation_meta.py  scheduler.py  secrets.py  skill.py  skill_extractor.py  skill_graph.py  skill_version.py  sop.py  store.py  (+3 more)
workspace/frost-sop/docs/: ARMORY_DESIGN.md  CODE_REVIEW_CHECKLIST.md  DEPLOYMENT.md  FROST_SCOUT_RESPONSE_FAMILY_ASSETS.md  FROST_SOP_CODE_PANORAMA.md  FROST_SOP_REPAIR_INSTRUCTIONS.md  FROST_V50_REPORT_RESPONSE.md  HANDOVER_V4.0_P2_治理系统修复.md  P0_SECURITY_FIX_REPORT.md  SELF_HEAL_001_GUIDE.md  TEST_STRATEGY_V2.md  WORKBUDDY_MUTATION_AND_COVERAGE.md  WORKBUDDY_V50_ABC_EXEC_SPEC.md  WORKBUDDY_VERSION_CLEANUP_FULL.md  alignment_report_v74_to_v80.md  alignment_report_v74_to_v80_revised.md  weapon_hunting.md
workspace/frost-sop/examples/: panel_demo.py
workspace/frost-sop/frontend/: package-lock.json  package.json  启动.bat
workspace/frost-sop/output/: mutation_report.json  mutation_report.md
workspace/frost-sop/renderers/: cli_renderer.py
workspace/frost-sop/scripts/: extract_skills.py  register_v8_skills.py  run_tests.py
workspace/frost-sop/skills/: analytics.py  assemble.py  code_diagnoser.py  code_validator.py  collectors.py  evolution.py  hunt.py  hunt_orchestration.py  importer.py  intent.py  knowledge.py  llm.py  mercenary.py  orchestration.py  orchestration_v3.py  output_validator.py  patch_applier.py  patch_generator.py  review_auditor.py  route_platform.py  search.py  search_gitee.py  self_heal_skills.py  succession.py  test_validator.py  tools.py  watchdog.py  web_fetcher.py
workspace/frost-sop/sops/: SOP-INTAKE-001.yaml  SOP-PARENT-001.yaml
workspace/frost-sop/stores/: asset.py  constitution.py
workspace/frost-sop/tests/: conftest.py  debug_audit.py  factories.py  mutation_harness.py  test_acceptance.py  test_agent.py  test_api_contract.py  test_api_endpoints.py  test_armory.py  test_armory_coverage.py  test_armory_v5.py  test_assemble.py  test_assemble_coverage.py  test_assembled_output.py  test_asset_v601.py  test_autonomy_data.py  test_benchmark.py  test_capability_meta.py  test_chaos_engineering.py  test_cli_renderer.py  test_content_writer.py  test_core_cost.py  test_core_log_config.py  test_core_memory.py  test_core_monitor.py  test_core_path_safety.py  test_cost_coverage.py  test_dead_mans_switch_coverage.py  test_decision_manager_coverage.py  test_e2e_v6.py  test_elder_coverage.py  test_elder_deep_quality.py  test_elder_e2e.py  test_email_coverage.py  test_encryption.py  test_event_subscribers.py  test_evolution_coverage.py  test_evolution_deep_quality.py  test_evolution_e2e.py  test_f10_skill_extractor.py  (+83 more)
(+313 files in other folders)
