[project]
name = "frost-sop"
version = "5.0.0"
description = "FROST-SOP: Fractal Agents with Family Governance Model"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "FROST Team"},
]
keywords = ["agent", "multi-agent", "sop", "ai", "framework"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "cryptography>=42.0.0",
    "chromadb>=0.5.0",
    "rich>=13.0.0",
    "plyer>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "bandit>=1.7.0",
]
legacy = [
    # F11 Streamlit UI 已废弃，仅 test_v4_p1_acceptance.py 引用
    "streamlit>=1.28.0",
    "win10toast>=0.9",
]
llm-local = [
    # 本地 LLM 推理（可选）
    "llama-cpp-python",
]

[project.urls]
Repository = "https://gitee.com/liao_liang_7514/solo-ops-platform"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["agents", "api", "core", "skills", "stores"]
py-modules = []

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B904"]
per-file-ignores = {"__init__.py" = ["F401"], "tests/*" = ["S", "B011"]}

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short --no-header"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.bandit]
exclude_dirs = ["tests", "data", "htmlcov", "frontend"]
skips = ["B101", "B601"]
