[project]
name = "frost-sop"
version = "6.0.0"
description = "FROST-SOP: Fractal Agents with Family Governance Model"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "FROST Team"},
]
keywords = ["agent", "multi-agent", "sop", "ai", "framework"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "openai==2.40.0",
    "pyyaml==6.0.3",
    "python-dotenv==1.2.2",
    "requests==2.34.2",
    "fastapi==0.138.0",
    "uvicorn==0.48.0",
    "cryptography==48.0.0",
    "rich==14.3.4",
    "apscheduler==3.11.0",
]

[project.optional-dependencies]
dev = [
    # Core testing
    "pytest==8.4.2",
    "pytest-cov==7.1.0",
    "pytest-asyncio==1.4.0",
    # Parallel & timeout
    "pytest-xdist==3.8.0",
    "pytest-timeout==2.4.0",
    # Randomized test order (detect hidden dependencies)
    "pytest-randomly==4.0.1",
    # Performance benchmarks
    "pytest-benchmark==5.1.0",
    # Property-based testing
    "hypothesis==6.145.0",
    # Mutation testing (requires WSL/Linux; native Windows not supported)
    # "mutmut==3.0.2",
    # Load testing
    "locust==2.41.0",
    # Lint & type check
    "ruff==0.15.20",
    "mypy==2.1.0",
    # Security scanning
    "bandit==1.8.3",
]
legacy = [
    # F11 Streamlit UI 已废弃，仅 test_v4_p1_acceptance.py 引用
    "streamlit>=1.28.0",
    "win10toast>=0.9",
]
llm-local = [
    # 本地 LLM 推理（可选）
    "llama-cpp-python",
]

[project.scripts]
frost-sop = "main:main_cli"

[project.urls]
Repository = "https://gitee.com/liao_liang_7514/solo-ops-platform"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["agents", "api", "core", "skills", "skills.content", "skills.publish", "stores"]
py-modules = []

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B904", "E402", "C401", "SIM102", "SIM103", "SIM105", "SIM115", "N806", "F841"]
per-file-ignores = {"__init__.py" = ["F401"], "tests/*" = ["S", "B011"]}

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
no_implicit_optional = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short --no-header --strict-markers --strict-config"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
    "ignore::PendingDeprecationWarning",
]
timeout = 300
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (may use DB/memory backends)",
    "e2e: End-to-end tests (full pipeline)",
    "slow: Slow tests (>5s, may use real LLM)",
    "benchmark: Performance benchmark tests",
    "property: Property-based tests (Hypothesis)",
    "load: Load/stress tests (Locust)",
    "security: Security-related tests",
]

[tool.coverage.run]
source = ["agents", "api", "core", "skills", "stores"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/experiments/*",
    "*/frontend/*",
    "*/htmlcov/*",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
skip_covered = false
sort = "Cover"
precision = 2

[tool.coverage.html]
directory = "htmlcov"

[tool.pytest-benchmark]
min_rounds = 5
max_time = 1.0
timer = "perf_counter"

[tool.mutmut]
paths_to_mutate = ["agents/", "api/", "core/", "skills/", "stores/"]
backup = false
runner = "python -X utf8 -m pytest -x --tb=no -s"
tests_dir = "tests/"
pre_mutation = "python -X utf8 -m pytest tests/ -q --tb=no -s"
post_mutation = "python -X utf8 -m pytest tests/ -q --tb=no -s"

[tool.bandit]
exclude_dirs = ["tests", "data", "htmlcov", "frontend"]
skips = ["B101", "B601"]
